--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgb(0, 0, 0);
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: hidden;
     font-family: 'Gruppo', sans-serif;
 }
 
@@ -9,7 +8,6 @@ input::placeholder {
     font-family: 'Gruppo', sans-serif;
     font-size: 20px;
 }
-
 
 .square {
     position: relative;
@@ -27,12 +25,24 @@ input::placeholder {
 
 .text {
     color: white;
-    font-size: 70px; 
+    font-size: 70px;
     font-weight: bold;
+    text-shadow: 0px 0px 20px rgb(25, 0, 255);
 }
 
 h5.text-light.text.text-center {
-    font-size: 20px; 
+    font-size: 20px;
+}
+
+.square span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: animate-scale 12s infinite linear;
 }
 
 .square span:nth-child(1) {
@@ -76,48 +86,68 @@ h5.text-light.text.text-center {
 
 @keyframes animate1 {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0deg) scale(1);
     }
+
+    50% {
+        transform: rotate(180deg) scale(1.05);
+    }
+
     100% {
-        transform: rotate(360deg);
+        transform: rotate(360deg) scale(1);
     }
 }
 
 @keyframes animate2 {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0deg) scale(1);
     }
+
+    50% {
+        transform: rotate(-180deg) scale(1.1);
+    }
+
     100% {
-        transform: rotate(360deg);
+        transform: rotate(-360deg) scale(1);
     }
 }
 
 @keyframes animate3 {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0deg) scale(1);
     }
+
+    50% {
+        transform: rotate(180deg) scale(0.95);
+    }
+
     100% {
-        transform: rotate(360deg);
+        transform: rotate(360deg) scale(1);
     }
 }
 
-/* Input Filed Start*/
+@keyframes animate-opacity {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+}
+
 #TextInput {
     background-color: #181818c2;
     border-color: blue;
-    box-shadow: 0 0 20px rgb#00b7ffcb,
-      inset 0 0 0px rgb(25, 0, 255);
+    box-shadow: 0 0 20px #00b7ffcb, inset 0 0 10px rgb(25, 0, 255);
     border-radius: 8px;
     color: white;
     padding: 3px 0px 3px 20px;
     margin: 0px 20%;
 }
 
-.wave-message {
-    font-size: 55px; 
-}
-
-  
 .input-field {
     background-color: transparent;
     border: none;
@@ -185,14 +215,26 @@ h5.text-light.text.text-center {
 
 @keyframes glowing {
     0% {
-      background-position: 0 0;
+        background-position: 0 0;
     }
 
     50% {
-      background-position: 400% 0;
+        background-position: 400% 0;
     }
 
     100% {
-      background-position: 0 0;
+        background-position: 0 0;
+    }
+}
+
+@keyframes animate-scale {
+
+    0%,
+    100% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.05);
     }
 }
